# file_truncate

./: .gitignore  Cargo.toml  README.md  config.yaml
src/: file_utils.rs  lib.rs  main.rs  trun_error.rs
src/config/: data_config.rs  mod.rs
