[package]
name = "file_truncate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml="0.9"
commander = "0.1"
regex = "1.5"
chrono = "0.4"
log4rs = "1.1.1"
log = "0.4.17"
forever-rs = { version = "0.1.2" }