[package]
name = "tunm_truncate_log"
version = "0.1.0"
edition = "2021"

description = "file truncate by Rust, auto truncate log "
repository = "https://github.com/tickbh/tunm_truncate_log"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["truncate", "log", "file"]

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml="0.9"
commander = "0.1"
regex = "1.5"
chrono = "0.4"
log4rs = "1.1.1"
log = "0.4.17"
forever-rs = { version = "0.1.2" }